# museair

./: .gitattributes  .gitignore  CHANGELOG.md  CRATES.IO-README.md  Cargo.toml  README.md  README.zh-Hans.md  museair.cpp
benches/: hashes.rs
results/: README.md  SMHasher3_MuseAir-128_--extra.txt  SMHasher3_MuseAir-BFast-128_--extra.txt  SMHasher3_MuseAir-BFast_--extra.txt  SMHasher3_MuseAir-BFast_--extra_--test=BadSeeds.txt  SMHasher3_MuseAir_--extra.txt  SMHasher_MuseAir-128_--extra.txt  SMHasher_MuseAir-BFast-128_--extra.txt  SMHasher_MuseAir-BFast_--extra.txt  SMHasher_MuseAir_--extra.txt  extract.py  plot-bench-bulkdata.py  plot-bench-bulkdatas.py  plot-bench-smallkeys.py
show-asm/: Cargo.toml  lib.rs
src/: hash.rs  lib.rs
