[package]
name = "museair"
version = "0.3.0"
edition = "2021"
authors = ["K--Aethiax"]
publish = true

description = "Fast portable hash algorithm with highest bulk throughput and lowest small key latency (1-32 bytes) among portable hashes listed in SMHasher3, and made improvements for quality and usability."

documentation = "https://docs.rs/museair"
repository = "https://github.com/eternal-io/museair"
license = "MIT OR Apache-2.0"
readme = "CRATES.IO-README.md"

keywords = ["hash", "hasher", "museair"]
categories = ["algorithms", "no-std"]

exclude = [
    "smhasher*",
    "results/*",
    "*.png",
    "*.cpp",
    "*.md",
    "!CRATES.IO-README.md",
]


[dev-dependencies]
hashverify = "0.1.0"
criterion = "0.5.1"
komihash = "0.4.1"
wyhash-final4 = "0.2.2"
wyhash = "0.5.0"


[[bench]]
name = "hashes"
harness = false
