[package]
name = "museair"
version = "0.5.1"
edition = "2021"
rust-version = "1.77.0"
authors = ["K--Aethiax"]

description = "The top-performing portable hashing algorithm to date."

documentation = "https://docs.rs/museair"
repository = "https://github.com/eternal-io/museair"
license = "MIT OR Apache-2.0"
readme = "CRATES.IO-README.md"

keywords = ["hash", "hasher", "museair", "wyhash", "rapidhash"]
categories = ["algorithms", "no-std"]

include = ["**/*.rs", "/*.md"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = ["std"]
std = []


[dev-dependencies]
hashverify = "0.1.0"
criterion = "0.8.2"
rapidhash = "4.4.1"
wyhash-final4 = "=0.2.2"
komihash = "=0.4.1"
seahash = "4.1.0"
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash64"] }
fxhash = "0.2.1"


[[bench]]
name = "hashes"
harness = false
